--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script type='text/javascript' src='./src/js/sparticles.min.js'></script>
-  
+
+  <title>多序列音樂生成平台</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 <body>
@@ -42,8 +43,6 @@
               </v-app-bar>
               <v-content>
                 <v-bottom-navigation
-                  :value="activeBtn"
-                  
                   grow
                 >
                   <v-btn href="./index.html">
@@ -154,9 +153,6 @@
     new Vue({
       el: '#app',
       vuetify: new Vuetify(),
-      components:[
-         
-      ],
       data() {
           return {
             se: {id:0, genre: 'rock & Pop'},
@@ -190,7 +186,7 @@
             var genre={"genre": this.select_id};
             var config = {
                 method: 'POST',
-                url: 'http://3fca-34-134-65-16.ngrok.io/random',
+                url: 'https://3fca-34-134-65-16.ngrok.io/random',
                 headers: {
                           'Content-Type': "application/json",
                           'Access-Control-Allow-Origin': "*" },
