整理前端資料夾

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -186,7 +186,7 @@
             var genre={"genre": this.select_id};
             var config = {
                 method: 'POST',
-                url: 'https://3fca-34-134-65-16.ngrok.io/random',
+                url: 'https://0e0a-35-193-236-127.ngrok.io/random',
                 headers: {
                           'Content-Type': "application/json",
                           'Access-Control-Allow-Origin': "*" },
