--- a/Frontend/Accompaniment_generate.html
+++ b/Frontend/Accompaniment_generate.html
@@ -123,9 +123,6 @@
     </v-app>
   </div>
 
-  <script src="./src/js/synthesis.js" type="module">
-    import synthesisjs from "./src/js/synthesis.js"
-  </script>
   <script>
     new Vue({
       el: '#app',
@@ -163,7 +160,7 @@
 
             var config = {
                 method: 'post',
-                url: 'https://3fca-34-134-65-16.ngrok.io/trackCondition',
+                url: 'https://0e0a-35-193-236-127.ngrok.io/trackCondition',
                 headers: {
                           'Content-Type': "multipart/form-data",
                           'Access-Control-Allow-Origin': "*" },
